--- a/introduction.tex
+++ b/introduction.tex
@@ -94,6 +94,8 @@ Certain designs are going to be proposed, with focus on different issues and giv
 
 \section{Dissertation Structure} \label{sec:struct}
 
+%TODO{Update the structure}
+
 Besides the introduction, this dissertation has 4 more chapters. The state of the art is divided into 3 chapters: \ref{chap:blockchain}, \ref{chap:blockchain-frameworks} e \ref{chap:blockchain-applicability}.
 
 In the chapter~\ref{chap:blockchain}, some important Blockchain concepts are introduced, which are crucial to understanding the rest of the content. In the chapter~\ref{chap:blockchain-frameworks}, the most relevant Blockchain development platforms are described, such as Ethereum and Hyperledger Fabric. In the chapter ~\ref{chap:blockchain-applicability}, the advantages and disadvantages of applying blockchain technologies to supply chain are discussed, and some related works are shown. Still in this chapter, some important design decisions are also presented.
